# ROS_MobileArm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
config/: view_bot.rviz
launch/: rsp.launch.py  rsp_sim_launch.py
learning/: Decision Makeing, Planning, and Control in Robotics.md  ROS_basic.md
log/: README.md  latest_build
robot_description/: robot.urdf.xacro  robot_core.xacro  robot_gazebo.xacro
src/: CMakeLists.txt  datatype.h  package.xml
src/husky_control/: package.xml
src/husky_gazebo/: package.xml
src/husky_gazebo/launch/: gazebo.launch.py
src/kinematics/: 4_wheel_kinematic_model.md
src/launch/: rsp.launch.py  rsp_sim_launch.py
src/path_plot/: CMakeLists.txt  package.xml
src/path_plot/src/: showpath.cpp  tf_odom.cpp
src/robot_description/: CMakeLists.txt  package.xml  robot_core.xacro
src/robot_description/launch/: description.launch.py  rsp_sim_launch.py
src/robot_description/urdf/: husky.urdf.xacro  husky_macro.urdf.xacro  robot.urdf.xacro  robot_gazebo.xacro  ur5.xacro
src/robot_description/urdf/inc/: ur5_macro.xacro  ur_macro.xacro
src/test_bot/: .gitignore  CMakeLists.txt  package.xml
src/test_bot/config/: diff_driven_controller.yaml  test.yaml
src/test_bot/install/: local_setup.sh  setup.sh
src/test_bot/install/test_bot/share/test_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/test_bot/install/test_bot/share/test_bot/cmake/: test_botConfig-version.cmake  test_botConfig.cmake
src/test_bot/install/test_bot/share/test_bot/environment/: ament_prefix_path.dsv  path.dsv
src/test_bot/install/test_bot/share/test_bot/launch/: display.launch.py  test_robot.launch.py
src/test_bot/install/test_bot/share/test_bot/rviz/: urdf_config.rviz
src/test_bot/install/test_bot/share/test_bot/src/: test_bot.urdf  test_robot.urdf
src/test_bot/launch/: display.launch.py
src/test_bot/src/: test_bot.urdf
src/test_bot/world/: empty_world.sdf
(+2 files in other folders)
